--- a/index.html
+++ b/index.html
@@ -689,8 +689,8 @@
 
     <script>
         // ⚠️ ДИГАР КУНЕД: URL ва KEY-и Supabase-и худро гузоред!
-        const SUPABASE_URL = 'https://csqdvbiiuhagegtagztg.supabase.co';
-        const SUPABASE_ANON_KEY = 'sb_publishable__TSYV3L6XYK5VQ2c_4Xepg_4xedbvef';
+        const SUPABASE_URL = 'https://rqesqppmasqthowvqypb.supabase.co';
+        const SUPABASE_ANON_KEY = 'sb_publishable_Q9SIZ27tEc_EClUAkKP6oA_V7SFn-1T';
         
         let supabaseClient = null;
         
