Update input element IDs to use underscores

--- a/index.html
+++ b/index.html
@@ -913,15 +913,15 @@
                     tempPayments = [];
                     
                     // Fill form
-                    document.getElementById('buyerName').value = contract.buyer_name || '';
-                    document.getElementById('buyerPhone').value = contract.buyer_phone || '';
-                    document.getElementById('contractName').value = contract.contract_name || '';
-                    document.getElementById('contractNo').value = contract.contract_no || '';
-                    document.getElementById('contractDate').value = contract.contract_date || '';
-                    document.getElementById('startDate').value = contract.start_date || '';
-                    document.getElementById('housePrice').value = contract.house_price || '';
-                    document.getElementById('initialPercent').value = contract.initial_percent || '';
-                    document.getElementById('monthsCount').value = contract.months_count || '';
+                    document.getElementById('buyer_Name').value = contract.buyer_name || '';
+                    document.getElementById('buyer_Phone').value = contract.buyer_phone || '';
+                    document.getElementById('contract_Name').value = contract.contract_name || '';
+                    document.getElementById('contract_No').value = contract.contract_no || '';
+                    document.getElementById('contract_Date').value = contract.contract_date || '';
+                    document.getElementById('start_Date').value = contract.start_date || '';
+                    document.getElementById('house_Price').value = contract.house_price || '';
+                    document.getElementById('initial_Percent').value = contract.initial_percent || '';
+                    document.getElementById('months_Count').value = contract.months_count || '';
                     
                     calculate();
                 }
